--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@onshape/apikey-node",
+  "name": "@onshape/apikey",
   "version": "0.0.0",
   "description": "Sample application using API keys",
   "private": true,
