--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onshape/apikey",
-  "version": "1.0.1",
+  "version": "1.0.0-1",
   "description": "Sample application using API keys",
   "private": true,
   "sideEffects": false,
