--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onshape/apikey",
-  "version": "1.0.0-2",
+  "version": "1.0.0",
   "description": "Sample application using API keys",
   "sideEffects": false,
   "license": "MIT",
